# ASCII_Art

./: README.md
ascci_video/: CMakeLists.txt
ascci_video/src/: main.cpp
real_time/: CMakeLists.txt
real_time/include/: Terminal.hpp
real_time/src/: Terminal.cpp  main.cpp
